# personal_api

./: .env  .gitignore  README.md  alembic.ini  config.py  hello.py  launcher.py  main.py  personal_api  personal_api.pub  pyproject.toml  requirements.txt  rough_page.py
.env/: .env.development
api/v1/: router.py
api/v1/endpoints/: CalendarHub.py  DailyEnglish.py  MotivatorPlay.py  affirmations.py  clean_temp.py  crypto.py  health.py  stock.py  system_health.py  timezone.py  token.py  translation.py  typing_test.py  weather.py
celery_tasks/: tasks.py
celery_utils/: __init__.py  config.py
core/: error_handlers.py  event_handlers.py  security.py
data/: AirportCityData.json
migrations/: env.py
models/: __init__.py
schemas/v1/: CalendarHub.py  DailyEnglish.py  MotivatorPlay.py  affirmations.py  clean_temp.py  crypto.py  health.py  stock.py  system_health.py  timezone.py  token.py  translation.py  user.py
services/authentication/: __init__.py
services/clean_temp/: __init__.py
services/crypto/: __init__.py
services/health/: __init__.py
services/stock/: __init__.py
services/weather/: __init__.py
static/: index.html
utils/: enums.py  errors.py  misc.py
