[tool.poetry]
name = "personal-api"
version = "0.1.0"
description = ""
authors = ["kishan <kishanvaghasiya3789@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.5"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
psycopg2-binary = "2.9.10"
mysql-connector-python = "9.1.0"
jwt = "1.3.1"
pytz = "2024.2"
aiodns = "3.2.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.11"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
ccxt = "4.4.34"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cryptography = "44.0.0"
distro = "1.9.0"
frozenlist = "1.5.0"
git-filter-repo = "2.45.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
idna = "3.10"
iniconfig = "2.0.0"
jiter = "0.8.0"
multidict = "6.1.0"
openai = "1.55.2"
packaging = "24.2"
pluggy = "1.5.0"
propcache = "0.2.0"
psutil = "6.1.0"
pycares = "4.5.0"
pycparser = "2.22"
pydantic = "2.10.2"
pydantic-core = "2.27.1"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
requests = "2.32.3"
setuptools = "75.6.0"
sniffio = "1.3.1"
starlette = "0.41.3"
tomlkit = "0.13.2"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.1"
yarl = "1.18.0"
celery = "^5.4.0"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
quote = "^3.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
httpx = "0.27.2"
aiodns = "3.2.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.11"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
asyncpg = "0.30.0"
attrs = "24.2.0"
ccxt = "4.4.34"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cryptography = "44.0.0"
distro = "1.9.0"
fastapi = "0.115.5"
frozenlist = "1.5.0"
git-filter-repo = "2.45.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
idna = "3.10"
iniconfig = "2.0.0"
jiter = "0.8.0"
jwt = "1.3.1"
multidict = "6.1.0"
mysql-connector-python = "9.1.0"
openai = "1.55.2"
packaging = "24.2"
pluggy = "1.5.0"
propcache = "0.2.0"
psutil = "6.1.0"
psycopg2-binary = "2.9.10"
pycares = "4.5.0"
pycparser = "2.22"
pydantic = "2.10.2"
pydantic-core = "2.27.1"
pytz = "2024.2"
requests = "2.32.3"
setuptools = "75.6.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.3"
tomlkit = "0.13.2"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.1"
yarl = "1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
