[project]
name = "personal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "aiodns==3.2.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.11",
    "aiosignal==1.3.1",
    "alembic==1.14.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "astunparse==1.6.3",
    "asyncpg==0.30.0",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "billiard==4.2.1",
    "black==24.10.0",
    "boto3==1.35.77",
    "botocore==1.35.77",
    "bs4==0.0.2",
    "build==1.2.2.post1",
    "cachecontrol==0.14.1",
    "cachetools==5.5.0",
    "ccxt==4.4.34",
    "celery==5.4.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "cleo==2.1.0",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "contourpy==1.3.1",
    "crashtest==0.4.1",
    "cryptography==44.0.0",
    "cycler==0.12.1",
    "datetime==5.5",
    "distlib==0.3.9",
    "distro==1.9.0",
    "dulwich==0.21.7",
    "fastapi-pagination==0.12.34",
    "fastapi[standard]==0.115.5",
    "fastjsonschema==2.21.1",
    "filelock==3.16.1",
    "flake8==7.1.1",
    "flatbuffers==24.3.25",
    "fonttools==4.55.3",
    "frozenlist==1.5.0",
    "futures==3.0.5",
    "gast==0.6.0",
    "gazpacho==1.1",
    "git-filter-repo==2.45.0",
    "google-api-core==2.24.0",
    "google-api-python-client==2.158.0",
    "google-auth==2.37.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.66.0",
    "goslate==1.5.4",
    "greenlet==3.1.1",
    "grpcio==1.68.1",
    "h11==0.14.0",
    "h5py==3.12.1",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.27.2",
    "idna==3.10",
    "iniconfig==2.0.0",
    "installer==0.7.0",
    "isort==5.13.2",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jeepney==0.8.0",
    "jiter==0.8.0",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jwt==1.3.1",
    "keras==3.7.0",
    "keyring==24.3.1",
    "kiwisolver==1.4.7",
    "kombu==5.4.2",
    "libclang==18.1.1",
    "lxml==5.3.0",
    "mako==1.3.8",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.9.3",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "more-itertools==10.5.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "mysql-connector-python==9.1.0",
    "namex==0.0.8",
    "numpy==2.0.2",
    "oauthlib==3.2.2",
    "openai==1.55.2",
    "opt-einsum==3.4.0",
    "optree==0.13.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandas-datareader==0.10.0",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "pkginfo==1.12.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "pluggy==1.5.0",
    "poetry==1.8.5",
    "poetry-core==1.9.1",
    "poetry-plugin-export==1.8.0",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.0",
    "proto-plus==1.25.0",
    "protobuf==5.29.3",
    "psutil==6.1.0",
    "psycopg2==2.9.10",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycares==4.5.0",
    "pycodestyle==2.12.1",
    "pycparser==2.22",
    "pydantic==2.10.2",
    "pydantic-core==2.27.1",
    "pydantic-settings==2.6.1",
    "pydictionary==2.0.1",
    "pyflakes==3.2.0",
    "pygments==2.18.0",
    "pymysql==1.1.1",
    "pyparsing==3.2.1",
    "pyproject-hooks==1.2.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "quote==3.0",
    "rapidfuzz==3.11.0",
    "redis==5.2.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rsa==4.9",
    "s3transfer==0.10.4",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "secretstorage==3.3.3",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "sib-api-v3-sdk==7.6.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "spotipy==2.25.0",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "stockprediction==1.0",
    "tenacity==9.0.0",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.18.0",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "tomlkit==0.13.2",
    "tqdm==4.67.1",
    "trove-classifiers==2024.10.21.16",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.3",
    "uvicorn==0.32.1",
    "vine==5.1.0",
    "virtualenv==20.28.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.0",
    "yarl==1.18.0",
    "zope-interface==7.2",
]

[tool.poetry]
name = "personal-api"
version = "0.1.0"
description = ""
authors = ["kishan <kishanvaghasiya3789@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.5"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
psycopg2-binary = "2.9.10"
mysql-connector-python = "9.1.0"
jwt = "1.3.1"
pytz = "2024.2"
aiodns = "3.2.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.11"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
ccxt = "4.4.34"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cryptography = "44.0.0"
distro = "1.9.0"
frozenlist = "1.5.0"
git-filter-repo = "2.45.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
idna = "3.10"
iniconfig = "2.0.0"
jiter = "0.8.0"
multidict = "6.1.0"
openai = "1.55.2"
packaging = "24.2"
pluggy = "1.5.0"
propcache = "0.2.0"
psutil = "6.1.0"
pycares = "4.5.0"
pycparser = "2.22"
pydantic = "2.10.2"
pydantic-core = "2.27.1"
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
requests = "2.32.3"
setuptools = "75.6.0"
sniffio = "1.3.1"
starlette = "0.41.3"
tomlkit = "0.13.2"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.1"
yarl = "1.18.0"
sphinx = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
httpx = "0.27.2"
aiodns = "3.2.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.11"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
asyncpg = "0.30.0"
attrs = "24.2.0"
ccxt = "4.4.34"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
cryptography = "44.0.0"
distro = "1.9.0"
fastapi = "0.115.5"
frozenlist = "1.5.0"
git-filter-repo = "2.45.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
idna = "3.10"
iniconfig = "2.0.0"
jiter = "0.8.0"
jwt = "1.3.1"
multidict = "6.1.0"
mysql-connector-python = "9.1.0"
openai = "1.55.2"
packaging = "24.2"
pluggy = "1.5.0"
propcache = "0.2.0"
psutil = "6.1.0"
psycopg2-binary = "2.9.10"
pycares = "4.5.0"
pycparser = "2.22"
pydantic = "2.10.2"
pydantic-core = "2.27.1"
pytz = "2024.2"
requests = "2.32.3"
setuptools = "75.6.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.3"
tomlkit = "0.13.2"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
uvicorn = "0.32.1"
yarl = "1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
